--- a/src/AkelTags/Tags.rc
+++ b/src/AkelTags/Tags.rc
@@ -33,16 +33,20 @@ FONT 8, "Ms Shell Dlg"
 }
 
 
-IDD_SETTINGS DIALOG 0, 0, 186, 95
+IDD_SETTINGS DIALOG 0, 0, 186, 118
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "TagsView Settings"
 FONT 8, "Ms Shell Dlg"
 {
-    DEFPUSHBUTTON   "OK", IDOK, 35, 75, 50, 14, 0, WS_EX_LEFT
-    PUSHBUTTON      "Cancel", IDCANCEL, 95, 75, 50, 14, 0, WS_EX_LEFT
+    DEFPUSHBUTTON   "OK", IDOK, 35, 98, 50, 14, 0, WS_EX_LEFT
+    PUSHBUTTON      "Cancel", IDCANCEL, 95, 98, 50, 14, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Parse on save (auto-parse file when it is saved)", IDC_CH_OPT_PARSEONSAVE, 5, 10, 175, 8, 0, WS_EX_LEFT
-    AUTOCHECKBOX    "Use Editor colors", IDC_CH_OPT_EDITORCOLORS, 5, 24, 175, 8, 0, WS_EX_LEFT
-    AUTOCHECKBOX    "ctags: output to stdout instead of temp file", IDC_CH_OPT_CTAGSSTDOUT, 5, 38, 175, 8, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Use Editor colors", IDC_CH_OPT_EDITORCOLORS, 5, 26, 175, 8, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Show tooltips", IDC_CH_OPT_SHOWTOOLTIPS, 5, 38, 175, 8, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "ctags: output to stdout instead of temp file", IDC_CH_OPT_CTAGSSTDOUT, 5, 54, 175, 8, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Scan all files in a folder", IDC_CH_OPT_SCANFOLDER, 5, 66, 175, 8, 0, WS_EX_LEFT
+    // Note: the recursive scanning may generate a tag file of several MB that takes toooooo long to visualize
+    //AUTOCHECKBOX    "Scan folders recursively", IDC_CH_OPT_SCANFOLDERRECURSIVELY, 5, 78, 175, 8, 0, WS_EX_LEFT
 }
 
 
