--- a/src/AkelTags/Tags.rc
+++ b/src/AkelTags/Tags.rc
@@ -51,6 +51,40 @@ FONT 8, "Ms Shell Dlg"
 }
 
 
+IDR_TAGSVIEW_MENU MENU
+{
+    POPUP "TreePopup1"
+    {
+        MENUITEM "Copy current item to Clipboard",                  IDM_TREE_COPYITEMTOCLIPBOARD
+        MENUITEM "Copy all items to Clipboard",                     IDM_TREE_COPYALLITEMSTOCLIPBOARD
+        MENUITEM ""                                                 -1
+        MENUITEM "Expand all nodes",                                IDM_TREE_EXPANDALLNODES
+        MENUITEM "Collapse all nodes",                              IDM_TREE_COLLAPSEALLNODES
+        MENUITEM ""                                                 -1
+        MENUITEM "Settings",                                        IDM_SETTINGS
+    }
+    POPUP "TreePopup2"
+    {
+        MENUITEM "Copy current item to Clipboard",                  IDM_TREE_COPYITEMTOCLIPBOARD
+        MENUITEM "Copy current item and its children to Clipboard", IDM_TREE_COPYITEMANDCHILDRENTOCLIPBOARD
+        MENUITEM "Copy all items to Clipboard",                     IDM_TREE_COPYALLITEMSTOCLIPBOARD
+        MENUITEM ""                                                 -1
+        MENUITEM "Expand child nodes",                              IDM_TREE_EXPANDCHILDNODES
+        MENUITEM "Collapse child nodes",                            IDM_TREE_COLLAPSECHILDNODES
+        MENUITEM "Expand all nodes",                                IDM_TREE_EXPANDALLNODES
+        MENUITEM "Collapse all nodes",                              IDM_TREE_COLLAPSEALLNODES
+        MENUITEM ""                                                 -1
+        MENUITEM "Settings",                                        IDM_SETTINGS
+    }
+    POPUP "ListPopup"
+    {
+        MENUITEM "Copy current item to Clipboard",                  IDM_LIST_COPYITEMTOCLIPBOARD
+        MENUITEM "Copy all items to Clipboard",                     IDM_LIST_COPYALLITEMSTOCLIPBOARD
+        MENUITEM ""                                                 -1
+        MENUITEM "Settings",                                        IDM_SETTINGS
+    }
+}
+
 
 //
 // String Table resources
