--- a/AkelTags_VC2017.vcxproj
+++ b/AkelTags_VC2017.vcxproj
@@ -180,7 +180,12 @@
     <ClCompile Include="src\TagsViewBase\EditorWrapper.cpp" />
     <ClCompile Include="src\TagsViewBase\OptionsManager.cpp" />
     <ClCompile Include="src\TagsViewBase\SettingsDlg.cpp" />
+    <ClCompile Include="src\TagsViewBase\TagsCommon.cpp" />
     <ClCompile Include="src\TagsViewBase\TagsDlg.cpp" />
+    <ClCompile Include="src\TagsViewBase\TagsDlgChild.cpp" />
+    <ClCompile Include="src\TagsViewBase\TagsFilterEdit.cpp" />
+    <ClCompile Include="src\TagsViewBase\TagsListView.cpp" />
+    <ClCompile Include="src\TagsViewBase\TagsTreeView.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\AkelTags\AkelDLL.h" />
@@ -193,7 +198,12 @@
     <ClInclude Include="src\TagsViewBase\OptionsManager.h" />
     <ClInclude Include="src\TagsViewBase\resource.h" />
     <ClInclude Include="src\TagsViewBase\SettingsDlg.h" />
+    <ClInclude Include="src\TagsViewBase\TagsCommon.h" />
     <ClInclude Include="src\TagsViewBase\TagsDlg.h" />
+    <ClInclude Include="src\TagsViewBase\TagsDlgChild.h" />
+    <ClInclude Include="src\TagsViewBase\TagsFilterEdit.h" />
+    <ClInclude Include="src\TagsViewBase\TagsListView.h" />
+    <ClInclude Include="src\TagsViewBase\TagsTreeView.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="src\AkelTags\Tags.rc" />
